# roborambo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: Assistants.md  Chains.md  Config.md  Tools.md
examples/config/assistant_library/: config.toml
examples/config/assistant_library/example/: config.toml
examples/config/assistant_library/sonoframbo/: config.toml
src/roborambo/: __init__.py  __main__.py  assistant.py  cli.py  config.py  config_tui.py  config_validator.py  daemon.py  memory.py  types.py
src/roborambo/chains/: __init__.py  rambo.py
src/roborambo/interfaces/: __init__.py  cli.py  discord.py  googlechat.py  matrix.py  mattermost.py  messaging.py  rocketchat.py  teams.py  web.py  zulip.py
src/roborambo/mcp/: __init__.py  adapter.py  host.py
src/roborambo/tools/: __init__.py  chat.py  expertask.py  file.py  graphql.py  image.py  inspector.py  internal_schedule.py  knowledgebase.py  mcp_manager.py  prompting.py  test.py  tool.py  util.py  vectorstore.py  web.py
tests/: configs.py
