[project]
name = "roborambo"
version = "0.0.01"
authors = [
    { name = "Keyton Stanier" },
]
description = "Dead simple framework to turn LLMs into potentially useful chatbots"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["assistant", "agent", "bot", "chatbot", "rag", "vectorstore", "gpt", "nothingburger", "nothing", "burger", "llm", "chain", "text-generation"]
license = { text = "idfk yet" }
dependencies = [
    'python-dotenv',
    'pandoc',
    'chromadb',
    'psycopg2-binary',
    'tomli-w',  # For TOML writing in config TUI
    'nothingburger',  # Core dependency
]

[project.optional-dependencies]
zulip = ['zulip']
tui = ['rich']  # Enhanced TUI experience
all = ['zulip', 'rich']  # All optional features

[project.scripts]
rambo-serve = "roborambo.daemon:serve"
rambo-cli = "roborambo.cli:run"
roborambo = "roborambo.cli:run"  # Main entry point
rambo = "roborambo.cli:run"  # Shorter alias
rambo-config = "roborambo.config_tui:main"  # Direct access to config TUI