[project]
name = "roborambo"
version = "0.0.2"
authors = [
    { name = "Keyton Stanier" },
]
description = "Dead simple framework to turn LLMs into chatbots"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["assistant", "bot", "chatbot", "llm", "minimalist"]
license = { text = "MIT" }
dependencies = [
    'nothingburger',    # Core LLM framework
    'requests',         # For web tool HTTP requests
]

[project.optional-dependencies]
# Messaging interfaces (install only what you need)
zulip = ['zulip']

# Tools (install only what you need) 
web = ['pandoc']    # For web tool text extraction

# Complete installations
all = ['zulip', 'pandoc']
interfaces = ['zulip'] 
tools = ['pandoc']

[project.scripts]
roborambo = "roborambo.cli:run"
rambo = "roborambo.cli:run"
rambo-serve = "roborambo.daemon:serve"
rambo-cli = "roborambo.cli:run"
rambo-config = "roborambo.config_tui:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"